--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,12 @@ body,
   margin: 0;
   padding: 0;
 }
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
 
-html.dark {
-  background: #121212;
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.1s ease-out;
 }
