--- a/src/styles/nprogress.css
+++ b/src/styles/nprogress.css
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: #67d391;
+  background: #1867c0;
 
   position: fixed;
   z-index: 1031;
@@ -23,8 +23,8 @@
   width: 100px;
   height: 100%;
   box-shadow:
-    0 0 10px #67d391,
-    0 0 5px #67d391;
+    0 0 10px #1867c0,
+    0 0 5px #1867c0;
   opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
